--- a/src/docs/asciidoc/road-to-immutability/077-hidden-content.adoc
+++ b/src/docs/asciidoc/road-to-immutability/077-hidden-content.adoc
@@ -18,7 +18,7 @@ interface NonEmptyImmutableList<T> extends HasSize {
     T first();
 
     // implicitly present: @NotModified
-    void visit(@Independent(hc=true) Consumer<T> consumer);
+    void visit(@Independent(hc=true) Consumer<T> consumer); // implicitly present: @NotModified
 
     @NotModified
     @Override
@@ -58,16 +58,21 @@ class ImmutableOne<T> implements NonEmptyImmutableList<T> {
 }
 ----
 
-We need the `visit` method to be non-modifying, and also not to modify its parameter `consumer`.
+According to the interface contract, we need the `visit` method to be non-modifying,
+and also not to modify its parameter `consumer`.
 However, following the normal definitions of modification, the following two statements hold:
 
 1. Because `accept` is {modified}, we should mark the parameter `consumer` as {modified}.
 2. Because `t`, the parameter of `accept`, is {modified}, we should mark `visit` as {modified}.
 
-The result of the first statement would violate the `@Container` property on `ImmutableOne`, and we'd be very reluctant to do that:
-according to the intuitive definition in <<containers>>, `ImmutableOne` is a type that holds data, but does not change the data it's been given.
-This statement still holds in the presence of a `visit` method, which is nothing but a way of exposing the object in a way similar to the method `first`.
-The second statement would make `visit` modifying, which again goes against our intuition: looping over elements is, in itself, not modifying.
+The result of the first statement would violate the `@Container` property on `ImmutableOne`, and we'd be very
+reluctant to do that:
+according to the intuitive definition in <<containers>>, `ImmutableOne` is a type that holds data, but does not
+change the data it has been given.
+This statement still holds in the presence of a `visit` method, which is nothing but a way of exposing the object
+in a way similar to the method `first`.
+The second statement would make `visit` modifying, which again goes against our intuition:
+looping over elements is, in itself, not modifying.
 
 Luckily, there are two observations that come to the rescue.
 
@@ -81,10 +86,11 @@ may be considered to be outside our scope.
 However, if we replace `Consumer` by `Set` and `accept` by `add`, we encounter a modification that we really do not
 want to ignore, in an otherwise equal setting.
 Therefore, it does not look like we can reason away potential modifications by `accept`.
-We will have to revert to a contracted {ignoreModifications} annotation on the parameter `consumer`, if we want to avoid `ImmutableOne` losing the `@Container` property.
+We will have to revert to a contracted {ignoreModifications} annotation on the parameter `consumer`,
+if we want to avoid `ImmutableOne` losing the `@Container` property.
 
-The second potential source of modifications, however, is one we will ignore in the `ImmutableOne` type,
-and _defer_ or _propagate_ to the place where a concrete implementation of the consumer is presented.
+While we will ignore this second source of modification in the `ImmutableOne` type,
+we will _defer_ or _propagate_ it to the place where a concrete implementation of the consumer is presented.
 We can ignore it here, because `t` is part of the hidden content of the type; what happens to
 its content happens outside the zone of control of `ImmutableOne`.
 The fact that it is passed as an argument to a method of `consumer` is reflected by the {independent} annotation.
@@ -107,7 +113,8 @@ These types are for generic use; one should never use them to represent some spe
 are of concern to the current type.
 Therefore, we make this annotation implicit in exactly this context.
 
-IMPORTANT: A parameter of formal functional interface type will be marked {ignoreModifications} implicitly.
+IMPORTANT: A parameter of a formal functional interface type of `java.util.function`
+ will be marked {ignoreModifications} implicitly.
 
 Looking at the more general case of a `forEach` implementation iterating over a list or array, we therefore end up with:
 
@@ -148,8 +155,9 @@ static void addNewLine(@Modified NonEmptyImmutableList<StringBuilder> list) {
 <2> Parameter-modifying lambda propagates a modification to `list` 's hidden content.
 
 It is the second method, `addNewLine`, that is of importance here.
-Thanks to the {modified} annotation, we know of a modification to `list`, even if `list` is of immutable type!
-It may help to see the for-loop written out, if we temporarily assume that we have added an implementation of `Iterable` to `NonEmptyImmutableList`, functionally identical to `visit`:
+Thanks to the {modified} annotation, we know of a modification to `list`.
+It may help to see the for-loop written out, if we temporarily assume that we have added an implementation of
+`Iterable` to `NonEmptyImmutableList`, functionally identical to `visit`:
 
 .Example {counter:example}, alternative implementation of `addNewLine`
 [source,java]
@@ -161,10 +169,15 @@ static void addNewLine(@Modified NonEmptyImmutableList<StringBuilder> list) {
 }
 ----
 
-We really need the link between `sb` and `list` for the modification on `sb` to propagate to `list`.
-Without this propagation, we would not be able to implement the full definition of modification of parameters, as stipulated in <<modification>>, in this relatively straightforward, and probably frequently occurring situation.
+Note that while `NonEmptyImmutableList` is immutable, its concrete instantiation gives access to a modifying method
+in its hidden content.
 
-Moving from `NonEmptyImmutableList` to `NonEmptyList`, defined <<NonEmptyList, here>>, which has a modifying method, allows us to contrast two different modifications:
+We really need the link between `sb` and `list` for the modification on `sb` to propagate to `list`.
+Without this propagation, we would not be able to implement the full definition of modification of parameters,
+as stipulated in <<modification>>, in this relatively straightforward and probably frequently occurring situation.
+
+Moving from `NonEmptyImmutableList` to `NonEmptyList`, defined <<NonEmptyList, here>>, which has a modifying method,
+ allows us to contrast two different modifications:
 
 .Example {counter:example}, contrasting the modification on the parameter `sb` to that on `list`
 [source,java]
@@ -181,7 +194,9 @@ static void replace(@Modified NonEmptyList<StringBuilder> list) {
 <1> Modification to the hidden content of `list`
 <2> Modification to the modifiable content of `list`
 
-Without storing additional information (e.g., using an as yet undefined annotation like `@Modified1` on `list` in `addNewLine`), however, we cannot make the distinction between a modification to the string builders inside `list`, or a modification to `list` itself.
+Without storing additional information (e.g., using an as yet undefined parameter like `@Modified(hc=true)` on `list`
+in `addNewLine`), however, we cannot make the distinction between a modification to the string builders
+inside `list`, or a modification to `list` itself.
 In other words, applying the two methods further on, we cannot compute
 
 .Example {counter:example}, using `print` and `addNewLine`
@@ -222,40 +237,44 @@ void addToStrings(@NotModified NonEmptyList<StringBuilder> list) {
 }
 ----
 
-[#hidden-content-linking]
-=== Hidden content linking
+[#content-linking]
+=== Content linking
 
-Going back to `ImmutableOne`, we see that the constructor links the parameter `t` to the instance's field by means of assignment.
-Let us call this binding of parameters of hidden content to the field _content linking_, and mark it using {independent}, _content dependence_:
+Going back to `ImmutableOne`, we see that the constructor links the parameter `t` to the instance's field by
+means of assignment.
+Let us call this binding of parameters of hidden content to the field _content linking_,
+and mark it using {independentHc}, _content dependence_:
 
 .Example {counter:example}, constructor of `ImmutableOne`
 [source,java]
 ----
 private final T t;
 
-public ImmutableOne(@Independent T t) {
+public ImmutableOne(@Independent(hc=true) T t) {
     this.t = t;
 }
 ----
 
-Returning a part of the hidden content of the type, or exposing it as argument, both warrants a {independent} annotation:
+Returning a part of the hidden content of the type, or exposing it as argument, both warrants a {independentHc}
+annotation:
 
 .Example {counter:example}, more methods of `ImmutableOne`
 [source,java]
 ----
-@Independent
+@Independent(hc=true)
 @Override
 public T first() {
     return t;
 }
 
 @Override
-public void visit(@Independent Consumer<T> consumer) {
+public void visit(@Independent(hc=true) Consumer<T> consumer) {
     consumer.accept(t);
 }
 ----
 
-Observe that content dependence implies absence of dependence, as described in <<linking-and-independence>> and <<computing-dependence>>, exactly because we are dealing with type parameters of an immutable type.
+Observe that content dependence implies absence of dependence, as described in <<linking-and-independence>>
+and <<computing-dependence>>, exactly because we are dealing with type parameters of an immutable type.
 
 Another place where the hidden content linking can be seen, is the _for-each_ statement:
 
@@ -275,20 +294,20 @@ Because the `Collection` API contains an `add` method annotated as:
 [source,java]
 ----
 @Modified
-boolean add(@NotNull @Independent E e);
+boolean add(@NotNull @Independent(hc=true) E e);
 ----
 
-indicating that after calling `add`, the argument will become part of the hidden content of the collection, we conclude that the local loop variable `sb` gets content linked to the `builders` list.
+indicating that after calling `add`, the argument will become part of the hidden content of the collection,
+we conclude that the local loop variable `sb` gets content linked to the `builders` list.
 Similarly, this loop variable contains hidden content from the `list` object.
 
-We reuse the annotation {independent} to indicate that the hidden content of two objects are linked.
 Let us look at a possible implementation of `Collection.addAll`:
 
 .Example {counter:example}, a possible implementation of `addAll` in `Collection`
 [source,java]
 ----
 @Modified
-boolean addAll(@NotNull1 @Independent Collection<? extends E> collection) {
+boolean addAll(@NotNull(content=true) @Independent(hc=true) Collection<? extends E> collection) {
     boolean modified = false;
     for (E e : c) if (add(e)) modified = true;
     return modified;
@@ -296,9 +315,11 @@ boolean addAll(@NotNull1 @Independent Collection<? extends E> collection) {
 ----
 
 The call to `add` content links `e` to `this`.
-Because `e` is also content linked to `c`, the parameter `collection` holds hidden content linked to the hidden content of the instance.
+Because `e` is also content linked to `c`, the parameter `collection` holds content linked to the hidden content of
+the instance.
 
-We are now properly armed to see how a for-each loop can be implemented using an iterator whose hidden content links to that of a container.
+We are now properly armed to see how a for-each loop can be implemented using an iterator whose hidden content
+links to that of a container.
 
 === Iterator, Iterable, loops
 
@@ -311,7 +332,7 @@ Let us start with the simplest definition of an iterator, without `remove` metho
 interface Iterator<T> {
 
     @Modified
-    @Independent
+    @Independent(hc=true)
     T next();
 
     @Modified
@@ -319,9 +340,11 @@ interface Iterator<T> {
 }
 ----
 
-Either the `next` method, or the `hasNext` method, must make a change to the iterator, because it has to keep track of the next element.
+Either the `next` method, or the `hasNext` method, must make a change to the iterator, because it has to keep track
+of the next element.
 As such, we make both {modified}.
-Following the discussion in the previous section, `next` is {independent}, because it returns part of the hidden content held by the iterator.
+Following the discussion in the previous section, `next` is {independentHc}, because it returns part of the hidden
+content held by the iterator.
 
 The interface `Iterable` is a supplier of iterators:
 
@@ -331,7 +354,7 @@ The interface `Iterable` is a supplier of iterators:
 @ImmutableContainer
 interface Iterable<T> {
 
-    @Independent
+    @Independent(hc=true)
     Iterator<T> iterator();
 }
 ----
@@ -366,7 +389,7 @@ A concrete implementation of an iterator is often a nested type, static or not (
 @ImmutableContainer
 public class ImmutableArray<T> implements Iterable<T> {
 
-    @NotNull1
+    @NotNull(content=true)
     private final T[] elements;
 
     @SuppressWarnings("unchecked")
@@ -427,21 +450,11 @@ A type is *independent*, annotated {independent}, when external modifications ca
 The hidden content of the type is mutable or modifiable.
 ****
 
-This definition is entirely equivalent to the definition of immutability without rules 0 and 1, and rules 2 and 3 restricted to those fields that are 'exposed' to the outside world via linking or hidden content linking.
+This definition is entirely equivalent to the definition of immutability without rules 0 and 1, and rules 2
+and 3 restricted to those fields that are 'exposed' to the outside world via linking or content linking.
 
-A third way of rephrasing the definition would be the following.
-It requires three prior steps:
-
-. Introduce a public getter for every non-private field
-. Define level n independence of a parameter or method return value exactly as level 1 independence for that parameter or method, but then with the parameter type or method return type content linking to that part of the type's hidden content which is level n immutable.
-. Observe that if a type `T` is part of the hidden content of type `C`, then there must be at least one parameter or method return value, of type `P`, which has `T` as part of its content (hidden in `P`, when `T` is hidden rather than transparent in `C`, or either accessible or hidden in `P`, when `T` is transparent).
-
-Then, the independence of a type is the minimum of the independence levels of the parameters and methods of the type.
-
-We hope that rephrasing helps clarify the definition.
-The third way is computationally the most interesting one.
-
-Consider the static variant of `IteratorImpl`, which makes it more obvious that `IteratorImpl` maintains a reference to the element array of its enclosing type:
+Consider the static variant of `IteratorImpl`, which makes it more obvious that `IteratorImpl` maintains a reference
+to the element array of its enclosing type:
 
 .Example {counter:example}, implementation of an `Iterator` as a static nested type
 [source,java]
@@ -479,8 +492,8 @@ public class ImmutableArray<T> implements Iterable<T> {
 
 The type `T` is part of the hidden content, the `T[]` and the counter `i` are part of the accessible content.
 No external modification can impact the array or the counter; indeed, only `T` and a `boolean` are exposed.
-The latter is recursively immutable, so does not allow modifications.
-The former allows modifications on the hidden content, whence the {independent1} annotation for `IteratorImpl`.
+The latter is immutable, so does not allow modifications.
+The former allows modifications on the hidden content, whence the {independentHc} annotation for `IteratorImpl`.
 
 Immutable types are independent as a type, but a type does not even have to be immutable to be independent.
 In fact, any type communicating via immutable types to the outside world is independent:
@@ -503,51 +516,25 @@ class GetterSetter {
 }
 ----
 
-The following table summarizes the relationship between immutability and independence:
+The following table summarizes the relationship between immutability and independence by means of example types:
 
 |===
-| |Mutable, Level 1 imm (modifiable) |Level 2 immutable |Level 3 immutable |Level n immutable |Recursively immutable
+| |Mutable, modifiable |Immutable with hidden content |Immutable without hidden content
 
 |Dependent
 |{y} `Set`
 |{n}
 |{n}
-|{n}
-|{n}
 
-|Independent1
+|Independent with hidden content
 |{y} `Iterator<T>`
 |{y} `Optional<T>`, `Set.of(T)`
-|{n}
-|{n}
-|{n}
-
-|Independent2
-|{y} `Iterator<Optional<T>>`
-|{n}
-|{y} `Set.of(Optional<T>)`
-|{n}
-|{n}
-
-|Independent n-1
-|{y}
-|{n}
-|{n}
-|{y}
 |{n}
 
 |Independent
 |{y} `Writer`, `Iterator<String>`
 |{n}
-|{n}
-|{n}
 |{y} `int`, `String`, `Class`
 |===
-
-There is no need to define different levels of hidden content linking of parameters and fields, beyond "independent or not".
-The important aspect there is whether linking to the hidden content is possible or not.
-Either it is not, or it is structurally impossible.
-The latter is only possible when the type is recursively immutable, which corresponds to the type being independent.
-
 
 //end of file
