--- a/src/docs/asciidoc/road-to-immutability/080-support-classes.adoc
+++ b/src/docs/asciidoc/road-to-immutability/080-support-classes.adoc
@@ -17,10 +17,10 @@ single boolean, which is at the same time the data and the guard:
 .Example {counter:example}, most of `org.e2immu.support.FlipSwitch`
 [source,java]
 ----
-@ImmutableContainer(after = "t")
+@ImmutableContainer(after="t")
 public class FlipSwitch {
 
-    @Final(after = "t")
+    @Final(after="t")
     private volatile boolean t;
 
     private boolean set$Precondition() { return !t; } // <1>
@@ -51,6 +51,7 @@ See <<preconditions-and-instance-state>> for more details.
 <2> The {mark} is present, even if it is executed conditionally.
 
 The obvious use case for this helper class is to indicate whether a certain job has been done, or not.
+Once it has been done, it can never be 'undone' again.
 
 [#support-setonce]
 === SetOnce
@@ -60,15 +61,15 @@ One step up from `FlipSwitch` is `SetOnce`: a place-holder for one object which 
 .Example {counter:example}, parts of `org.e2immu.support.SetOnce`
 [source,java]
 ----
-@ImmutableContainer(hc = true, after = "t")
+@ImmutableContainer(hc=true, after="t")
 public class SetOnce<T> {
 
-    @Final(after = "t")
+    @Final(after="t")
     private volatile T t;
 
     @Mark("t")
     @Modified
-    public void set(@NotNull @Independent(hc = true) T t) {
+    public void set(@NotNull @Independent(hc=true) T t) {
         if (t == null) throw new NullPointerException("Null not allowed");
         if (this.t != null) {
             throw new IllegalStateException("Already set: have " + this.t + ", try to set " + t);
@@ -76,9 +77,9 @@ public class SetOnce<T> {
         this.t = t;
     }
 
-    @Only(after = "t")
+    @Only(after="t")
     @NotNull
-    @Independent(hc = true)
+    @Independent(hc=true)
     @NotModified
     public T get() {
         if (t == null) {
@@ -93,7 +94,7 @@ public class SetOnce<T> {
         return t != null;
     }
 
-    @Independent(hc = true) // <1>
+    @Independent(hc=true) // <1>
     @NotModified
     public T getOrDefault(T defaultValue) {
         if (isSet()) return get();
@@ -118,18 +119,18 @@ Then, the state changes and the type becomes immutable:
 .Example {counter:example}, `org.e2immu.support.EventuallyFinal`
 [source,java]
 ----
-@ImmutableContainer(hc = true, after = "isFinal")
+@ImmutableContainer(hc=true, after="isFinal")
 public class EventuallyFinal<T> {
     private T value;
     private boolean isFinal;
 
-    @Independent(hc = true)
+    @Independent(hc=true)
     public T get() {
         return value;
     }
 
     @Mark("isFinal")
-    public void setFinal(@Independent(hc = true) T value) {
+    public void setFinal(@Independent(hc=true) T value) {
         if (this.isFinal) {
             throw new IllegalStateException("Trying to overwrite a final value");
         }
@@ -137,8 +138,8 @@ public class EventuallyFinal<T> {
         this.value = value;
     }
 
-    @Only(before = "isFinal")
-    public void setVariable(@Independent(hc = true) T value) {
+    @Only(before="isFinal")
+    public void setVariable(@Independent(hc=true) T value) {
         if (this.isFinal) throw new IllegalStateException("Value is already final");
         this.value = value;
     }
@@ -148,7 +149,7 @@ public class EventuallyFinal<T> {
         return isFinal;
     }
 
-    @TestMark(value = "isFinal", before = true)
+    @TestMark(value="isFinal", before=true)
     public boolean isVariable() {
         return !isFinal;
     }
@@ -167,10 +168,10 @@ allow free modifications, until the type is _frozen_ and no modifications can be
 .Example {counter:example}, `org.e2immu.support.Freezable`
 [source,java]
 ----
-@ImmutableContainer(after = "frozen") // <1>
+@ImmutableContainer(after="frozen") // <1>
 public abstract class Freezable {
 
-    @Final(after = "frozen")
+    @Final(after="frozen")
     private volatile boolean frozen;
 
     @Mark("frozen")
@@ -196,12 +197,12 @@ public abstract class Freezable {
 }
 ----
 
-<1> Because the type is abstract, `hc = true` is implied.
+<1> Because the type is abstract, `hc=true` is implied.
 <2> This companion method is present in the code to validate the computation of the precondition.
 See <<preconditions-and-instance-state>> for more details.
 
-Note that as discussed in <<inheritance>>, it is important for `Freezable`, as an abstract class, to be recursively immutable:
-derived classes can only go _down_ the immutability scale, not up!
+Note that as discussed in <<inheritance>>, it is important for `Freezable`, as an abstract class, to be immutable:
+derived classes can never be immutable when their parents are not immutable.
 
 [#support-setoncemap]
 === SetOnceMap
@@ -211,14 +212,14 @@ We discuss one example that makes use of (derives from) `Freezable`: a freezable
 .Example {counter:example}, part of `org.e2immu.support.SetOnceMap`
 [source,java]
 ----
-@ImmutableContainer(hc = true, after = "frozen")
+@ImmutableContainer(hc=true, after="frozen")
 public class SetOnceMap<K, V> extends Freezable {
 
     private final Map<K, V> map = new HashMap<>();
 
-    @Only(before = "frozen")
-    public void put(@Independent(hc = true) @NotNull K k,
-                    @Independent(hc = true) @NotNull V v) {
+    @Only(before="frozen")
+    public void put(@Independent(hc=true) @NotNull K k,
+                    @Independent(hc=true) @NotNull V v) {
         Objects.requireNonNull(k);
         Objects.requireNonNull(v);
         ensureNotFrozen();
@@ -229,7 +230,7 @@ public class SetOnceMap<K, V> extends Freezable {
         map.put(k, v);
     }
 
-    @Independent(hc =  true)
+    @Independent(hc=true)
     @NotNull
     @NotModified
     public V get(K k) {
@@ -262,21 +263,21 @@ Properly implemented, it is an eventually immutable type:
 .Example {counter:example}, `org.e2immu.support.Lazy`
 [source,java]
 ----
-@ImmutableContainer(hc = true, after = "t")
+@ImmutableContainer(hc=true, after="t")
 public class Lazy<T> {
 
-    @NotNull(content = true)
-    @Independent(hc = true, after = "t")
+    @NotNull(content=true)
+    @Independent(hc=true, after="t")
     private Supplier<T> supplier;
 
-    @Final(after = "t")
+    @Final(after="t")
     private volatile T t;
 
-    public Lazy(@NotNull(content = true) @Independent(hc = true) Supplier<T> supplier) { // <1>
+    public Lazy(@NotNull(content=true) @Independent(hc=true) Supplier<T> supplier) { // <1>
         this.supplier = supplier;
     }
 
-    @Independent(hc = true)
+    @Independent(hc=true)
     @NotNull
     @Mark("t") // <2>
     public T get() {
@@ -293,14 +294,14 @@ public class Lazy<T> {
 }
 ----
 
-<1> The annotation has travelled from the field to the parameter; therefore the parameter has `@Independent(hc = true)`.
+<1> The annotation has travelled from the field to the parameter; therefore the parameter has `@Independent(hc=true)`.
 <2> The {mark} annotation is conditional; the transition is triggered by nullity of `t`
-<3> Here `t`, part of the hidden content, links to `supplier`, as explained in <<hidden-content-linking>>.
+<3> Here `t`, part of the hidden content, links to `supplier`, as explained in <<content-linking>>.
 The statement also causes the {nncontent} annotation, as defined in <<nullable-section>> and <<identity-and-fluent>>.
 <4> After the transition from mutable to effectively immutable, the field `supplier` moves out of the picture.
 
 After calling the marker method `get()`, `t` cannot be assigned anymore, and it becomes {final}.
-The constructor parameter `supplier` is `@Independent(hc = true)`, as its hidden content (the result of `get()`)
+The constructor parameter `supplier` is `@Independent(hc=true)`, as its hidden content (the result of `get()`)
 links to that of `Lazy`, namely the field `t`.
 
 But why is `supplier` as a field not linked to the constructor parameter?
@@ -333,29 +334,29 @@ value, and transitions to another:
 .Example {counter:example}, `org.e2immu.support.FirstThen`
 [source,java]
 ----
-@ImmutableContainer(hc = true, after = "mark")
+@ImmutableContainer(hc=true, after="mark")
 public class FirstThen<S, T> {
     private volatile S first;
     private volatile T then;
 
-    public FirstThen(@NotNull @Independent(hc = true) S first) {
+    public FirstThen(@NotNull @Independent(hc=true) S first) {
         this.first = Objects.requireNonNull(first);
     }
 
-    @TestMark(value = "first", before = true)
+    @TestMark(value="first", before=true)
     @NotModified
     public boolean isFirst() {
         return first != null;
     }
     
-    @TestMark(value = "first")
+    @TestMark(value="first")
     @NotModified
     public boolean isSet() {
         return first == null;
     }
 
     @Mark("mark")
-    public void set(@Independent(hc = true) @NotNull T then) {
+    public void set(@Independent(hc=true) @NotNull T then) {
         Objects.requireNonNull(then);
         synchronized (this) {
             if (first == null) throw new IllegalStateException("Already set");
@@ -364,8 +365,8 @@ public class FirstThen<S, T> {
         }
     }
 
-    @Only(before = "mark")
-    @Independent(hc = true)
+    @Only(before="mark")
+    @Independent(hc=true)
     @NotModified 
     @NotNull 
     public S getFirst() {
@@ -376,8 +377,8 @@ public class FirstThen<S, T> {
         return s;
     }
 
-    @Only(after = "mark")
-    @Independent(hc = true)
+    @Only(after="mark")
+    @Independent(hc=true)
     @NotModified 
     @NotNull 
     public T get() {
